Wed Dec 21 10:02:03 GMT 2011  Olly Betts <olly@survex.com>

	* query.cc: Change Xapian::weight to double.

Wed Dec 21 05:25:40 GMT 2011  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst,omega.cc,query.cc: Make DEFAULTOP default to AND
	  rather than OR, since that matches what pretty much every search
	  engine does these days.  Closes ticket#512.

Tue Dec 13 11:21:54 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.2.8 and ChangeLog.

Fri Dec 09 14:08:04 GMT 2011  Olly Betts <olly@survex.com>

	* docs/omegascript.rst,query.cc,templates/emptydocs,templates/godmode,
	  templates/query,urldecode.h,urlenctest.cc: Add new $prettyurl{}
	  command which undoes RFC3986 URL escaping which doesn't affect
	  semantics in practice.  Partly addresses ticket#550.

Thu Dec 08 08:19:26 GMT 2011  Olly Betts <olly@survex.com>

	* omindex.cc: Improve --help output (and man page which is generated
	  from it).  Closes bug#572.

Thu Dec 08 04:51:12 GMT 2011  Olly Betts <olly@survex.com>

	* Makefile.am: Ship new header urldecode.h.

Thu Dec 08 03:34:02 GMT 2011  Olly Betts <olly@survex.com>

	* Makefile.am,cgiparam.cc,urldecode.h,urlenctest.cc: Add new
	  implementation of URL decoding - the old one didn't handle
	  various corner cases well, and had two cut and pasted variants
	  for handling a input from a C string (GET) or from stdin (POST).
	  Also add a new unit test program to test URL encoding and decoding.
	  Fixes bug#578.

Tue Dec 06 13:30:45 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and to reflect backporting activity.

Mon Dec 05 03:19:21 GMT 2011  Olly Betts <olly@survex.com>

	* scriptindex.cc: If no rules are found in the index script, report an
	  error and give up - this is inevitably the result of a mistake, and
	  adding empty documents to the database isn't helpful.

Sat Oct 29 14:49:40 GMT 2011  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Add note to discourage use of percentage
	  scores.