@@ -79,15 +79,14 @@ AC_CHECK_HEADERS([netinet/in.h arpa/inet.h sys/time.h]dnl
 
 dnl libmagic used to detect MIME types for files we don't detect by extension.
 AC_CHECK_HEADERS([magic.h])
-if test $ac_cv_header_magic_h = yes ; then
-  save_LIBS=$LIBS
-  LIBS=
-  AC_SEARCH_LIBS([magic_open], [magic])
-  MAGIC_LIBS=$LIBS
-  LIBS=$save_LIBS
-else
-  MAGIC_LIBS=
+if test $ac_cv_header_magic_h != yes ; then
+  AC_MSG_ERROR([libmagic required but magic.h not found])
 fi
+save_LIBS=$LIBS
+LIBS=
+AC_SEARCH_LIBS([magic_open], [magic])
+MAGIC_LIBS=$LIBS
+LIBS=$save_LIBS
 AC_SUBST([MAGIC_LIBS])
 
 dnl mingw (for instance) lacks ssize_t
