@@ -1,3 +1,8 @@
+Thu Dec 22 03:50:30 GMT 2011  Olly Betts <olly@survex.com>
+
+	* INSTALL,configure.ac,diritor.cc,diritor.h: Make libmagic a required
+	  dependency.
+
 Wed Dec 21 10:02:03 GMT 2011  Olly Betts <olly@survex.com>
 
 	* query.cc: Change Xapian::weight to double.
